--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -239,7 +239,7 @@ li {
   border: 2px solid #9ec34b;
   position: relative;
   overflow: hidden;
-  z-index: 1;
+  z-index: 0;
 }
 .btn-open:after{
   width: 100%;
@@ -355,7 +355,7 @@ li {
 .skill-img {
   width: 60px;
   height: auto;
-  margin-right: 20px;
+  margin-right: 30px;
 }
 
 .skill-body {
@@ -622,4 +622,14 @@ li {
 
 .logo{
   max-width: 70%;
+}
+
+section {position: relative;}
+.second img {
+  position: absolute;
+  width: 60px;
+  height: auto;
+  margin-right: 20px;
+  top: 25px;
+  left: 20px;
 }
